--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -12,6 +12,8 @@ img {
   font-weight: 900;
 }
 
+
+
 /* do not edit this footer */
 .footer {
   position: fixed;
@@ -24,3 +26,29 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.info {
+  display: flex;
+  justify-content: center;
+  margin: 16px;
+}
+
+.container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.block {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+  margin: 32px;
+  width: 200px;
+}
+
+.text {
+  flex-wrap: wrap;
+}
+
