--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,10 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 16px;
+  display: flex;
+  gap: 16px;
+  justify-content: space-between;
 }
 
 .icon {
@@ -48,6 +52,22 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+}
+
+.col2 {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.header {
+  font-weight: 700;
+  font-size: 20px;
+}
+
+.buttons {
+  display: flex;
+  gap: 8px;
 }
 
 button {
