Complete flex exercise 06

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,12 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 16px;
+
 }
 
 img {
@@ -24,3 +30,74 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+ul {
+  display: flex;
+  list-style-type: none; 
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+}
+
+.header, .footer {
+  display: flex;
+  align-items: center;
+}
+
+.header, .footer {
+  text-decoration: none;
+}
+
+a {
+  text-decoration: #666;
+  color: black;
+}
+
+.left-links, .right-links {
+  display: flex;
+  gap: 16px;
+  flex: 1;
+  padding: 16px;
+}
+
+
+.left-links {
+  justify-content: flex-start;
+  margin-left: 16px;
+}
+
+.right-links {
+  justify-content: flex-end;;
+  margin-right: 16px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  flex: 1;
+}
+
+.buttons {
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+}
+
+.buttons button {
+  font-size: 14px;
+  background-color: #f5d7c7;
+  padding: 12px;
+}
+
+.footer {
+  background-color: #f5d7c7;
+}
+
+.header, .content, .footer {
+  display: flex;
+  height: 60px;
+}
+
